--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,87 @@ body {
   max-width: 1800px;
 }
 
+#backvideo {
+position: fixed; top: 0;
+width: 100%;
+overflow: hidden;
+z-index: -3;
+
+
+}
+.hero .logo{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 15vw; 
+  background-color: rgb(255, 255, 255);
+  display: flexbox;
+  padding: 10px;
+  display:block;
+}
+
+.sidebar{
+  background-color: rgba(255, 255, 255, 0.395);
+  left: 0;
+  top: 0;
+  position: fixed;
+  width: 15vw;
+  height: 100vh;
+  z-index: -1;
+}
+
+.sidebar .text-box{
+  transform: rotate(270deg);
+  text-align: center;
+  position: absolute;
+  top: 50%; left: 0;
+  display: flexbox;
+
+} 
+.sidebar .text-box > h4{ 
+  position: relative;
+  font-weight: 500;
+  text-decoration: underline;
+  text-underline-position: under;
+  font-size: 1.2vw;
+}
+.sidebar .text-box > h1{ 
+  position: relative;
+  font-weight: 300;
+  font-size: 2.2vw;
+  margin-bottom: 0.5em;
+  text-wrap: nowrap;
+}
+
+.content{
+  right: 10%;
+  top: 50%;
+  position: fixed;
+  color: rgba(255, 255, 255, 0.635);
+  z-index: -1;
+  display: flexbox;
+  width: 25vw;height: 20vh;
+}
+.content > h1{
+  font-weight: 600;
+  font-size: 6vh;
+}
+.content > p{
+  font-weight: 400;
+  font-size: 2vh;
+  text-wrap: nowrap;
+}
+#icon{
+  display: flex;
+  width: 50%;
+  background-color: rgba(255, 255, 255, 0.621);
+  margin-top: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 1.3%;
+  padding-bottom: 1.3%;
+  border-radius: 5px;
+
+}
+
 /* write code here */
